--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -29,12 +29,12 @@
 }
 
 .sidebar-closed {
-  margin-left: 5%; /* When sidebar is collapsed */
-  width: 95%;
+  margin-left: 2%;
+  width: 98%;
 }
 
 .sidebar-open {
-  margin-left: 15%; /* When sidebar is open */
+  margin-left: 15%;
   width: 85%;
 }
 
